--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
-        jcenter()
+        //google()
+        //jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -12,9 +14,13 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        maven { url 'http://raw.github.com/saki4510t/libcommon/master/repository/' }
-        jcenter()
+        //google()
+
+        //jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        //maven { url 'http://raw.github.com/saki4510t/libcommon/master/repository/' }
+        maven{url 'https://gitee.com/liuchaoya/libcommon/raw/master/repository/'}
     }
 }
 
